--- a/notebooks/analysis/xarray_aggregations.ipynb
+++ b/notebooks/analysis/xarray_aggregations.ipynb
@@ -181,9 +181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyaos-ams-2021]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pyaos-ams-2021-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
